<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".ui.Group.GroupAdd">

    <EditText
        android:id="@+id/editName"
        style="@style/editText"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/group_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editNoOfPerson"
        style="@style/editText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/no_of_persons"
        android:inputType="number" />

    <EditText
        android:id="@+id/editAmount"
        style="@style/editText"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editStartDate"
        style="@style/editText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/start_date"
        android:inputType="text" />


    <EditText
        android:id="@+id/editType"
        style="@style/editText"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/type"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/editBondCharge"
        style="@style/editText"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:inputType="numberDecimal"
        android:hint="@string/bond_charge" />

    <EditText
        android:id="@+id/editOccurence"
        style="@style/editText"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:inputType="textAutoComplete"
        android:hint="@string/occurence" />

    <EditText
        android:id="@+id/editStatus"
        style="@style/editText"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:inputType="textAutoComplete"
        android:hint="@string/status" />

    <Button
        android:id="@+id/btnSave"
        style="@style/btnStyle"
        android:layout_row="8"
        android:layout_column="0"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/btnStyle"
        android:layout_row="8"
        android:layout_column="1"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnNew"
        style="@style/btnStyle"
        android:layout_row="8"
        android:layout_column="2"
        android:text="@string/New" />
</GridLayout>