<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".ui.Group.GroupsEdit">

    <EditText
        android:id="@+id/editName"
        style="@style/editText"
        android:layout_row="0"
        android:layout_column="0"
        android:hint="@string/group_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editNoOfPerson"
        style="@style/editText"
        android:layout_row="1"
        android:layout_column="0"
        android:hint="@string/no_of_persons"
        android:inputType="number" />

    <EditText
        android:id="@+id/editAmount"
        style="@style/editText"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <AutoCompleteTextView
        android:id="@+id/editPeridType"
        style="@style/editText"
        android:layout_row="3"
        android:layout_column="0"
        android:inputType="textAutoComplete"
        android:layout_marginTop="10dp"
        android:hint="Select Period" />

    <AutoCompleteTextView
        android:id="@+id/editStartDate"
        style="@style/editText"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:inputType="textAutoComplete"
        android:hint="@string/start_date" />

    <EditText
        android:id="@+id/editBondCharge"
        style="@style/editText"
        android:layout_row="5"
        android:layout_column="0"
        android:inputType="numberDecimal"
        android:hint="@string/bond_charge"/>

    <TextView
        android:id="@+id/lblTotalAmount"
        style="@style/editText"
        android:layout_row="6"
        android:layout_column="0"
        android:textAlignment="center"
        android:textSize="40dp"
        android:inputType="numberDecimal"
        android:hint="Total Amount"/>

    <Button
        android:id="@+id/btnSave"
        style="@style/btnStyle"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/save" />
</GridLayout>