<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnOrderPreserved="true"
    android:columnCount="3">
    <TextView
        style="@style/stylLbl"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/group_name" />

    <Spinner android:layout_width="250dp"
        android:id="@+id/editPerson"
        style="@style/stylSpin"
        android:layout_row="0"
        android:layout_column="1"
        android:inputType="textAutoComplete" />


    <TextView
        style="@style/stylLbl"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/occurence" />


    <TextView
        android:id="@+id/startDate"
        style="@style/stylSpin"
        android:layout_row="1"
        android:layout_column="1"
        android:inputType="date" />


    <GridLayout
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnSave"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnNew"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/New" />

    </GridLayout>

    <GridView
        android:id="@+id/gvDataView"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="15dp"
        android:visibility="visible" />
</GridLayout>