<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Links.GroupPersonLink">

    <TableRow>

        <TextView
            style="@style/txtLebel"
            android:text="@string/group_name" />

        <Spinner
            android:id="@+id/editGroup"
            style="@style/editText"
            android:layout_width="220dp"
            android:inputType="textAutoComplete" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/txtLebel"
            android:text="Person Name" />

        <Spinner
            android:id="@+id/editPerson"
            style="@style/spnStyle"
            android:layout_width="220dp"
            android:inputType="textAutoComplete" />
    </TableRow>


    <TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:layout_span="4"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnSave"
                style="@style/btnStyle"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/btnStyle"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btnNew"
                style="@style/btnStyle"
                android:layout_column="0"
                android:text="@string/New" />
        </TableRow>
    </TableRow>

    <GridView
        android:id="@+id/gvPersons"
        android:layout_marginTop="15dp" />

</TableLayout>