<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".ui.Group.GroupsEdit">

    <EditText
        android:id="@+id/editName"
        style="@style/editText"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="Period Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editStartDate"
        style="@style/editText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/start_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/editEndDate"
        style="@style/editText"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="End Date"
        android:inputType="date" />

    <Button
        android:id="@+id/btnSave"
        style="@style/btnStyle"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/btnStyle"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnNew"
        style="@style/btnStyle"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/New" />

    <GridLayout
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3">

        <GridView
            android:id="@+id/gvGroup"
            android:layout_marginTop="15dp" />
    </GridLayout>
</GridLayout>