<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3">

    <TextView
        style="@style/txtLebel"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/person_name" />

    <Spinner
        android:id="@+id/editPerson"
        style="@style/editText"
        android:layout_width="100dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="textAutoComplete" />

    <TextView
        style="@style/txtLebel"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:text="@string/total_amount" />

    <TextView
        android:id="@+id/lblTotalAmount"
        style="@style/txtLebel"
        android:layout_width="100dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:text="1000000.00"
        android:textFontWeight="25" />

    <TextView
        style="@style/txtLebel"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:text="@string/paid_amount" />

    <TextView
        android:id="@+id/lblPaidAmount"
        style="@style/txtLebel"
        android:layout_width="100dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:text="1000000.00"
        android:textFontWeight="25" />

    <TextView
        style="@style/txtLebel"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="10dp"
        android:text="@string/balance_amount" />

    <TextView
        android:id="@+id/lblBalmount"
        style="@style/txtLebel"
        android:layout_width="100dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:text="1000000.00" />

    <GridLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblNarration"
            style="@style/txtLebel"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="Dynamic" />

        <TextView
            android:id="@+id/lblpendingAmount"
            style="@style/txtLebel"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:width="100dp"
            android:text="0.00"
            android:textAlignment="viewEnd" />

        <TextView
            style="@style/txtLebel"
            android:layout_width="10dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:text=":"
            android:textAlignment="viewEnd" />

        <EditText
            android:id="@+id/editAmount"
            style="@style/editText"
            android:layout_width="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:text="00.00"
            android:textAlignment="viewEnd" />
    </GridLayout>

    <GridLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnSave"
            style="@style/btnStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/btnStyle"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnNew"
            style="@style/btnStyle"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/New" />

    </GridLayout>

    <GridView android:visibility="visible"
        android:id="@+id/gvDataView"
        android:layout_height="400dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="15dp" />

</GridLayout>