<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_columnWeight="200"
    android:columnCount="3"
    tools:context=".ui.Links.PersonTrans">

    <GridLayout
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/stylLbl"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/person_name" />

        <Spinner
            android:id="@+id/editPerson"
            style="@style/stylSpin"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="textAutoComplete" />
    </GridLayout>

    <TextView
        style="@style/stylLbl"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="200dp"
        android:text="@string/total_amount" />

    <TextView
        android:id="@+id/lblTotalAmount"
        android:layout_width="170dp"
        style="@style/stylLbl"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:text="00.00"
        android:textFontWeight="25" />

    <TextView
        style="@style/stylLbl"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/paid_amount" />

    <TextView
        android:id="@+id/lblPaidAmount"
        style="@style/stylLbl"
        android:layout_width="100dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:text="00.00"
        android:textFontWeight="25" />

    <TextView
        style="@style/stylLbl"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/balance_amount" />

    <TextView
        android:id="@+id/lblBalmount"
        style="@style/stylLbl"
        android:layout_width="100dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:text="00.00" />

    <GridLayout
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblNarration"
            style="@style/stylLbl"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:text="Dynamic" />

        <TextView
            android:id="@+id/lblpendingAmount"
            style="@style/stylLbl"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:width="150dp"
            android:text="0.00"
            android:textAlignment="viewEnd" />

        <TextView
            style="@style/stylLbl"
            android:layout_width="10dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text=":" />

        <EditText
            android:id="@+id/editAmount"
            style="@style/stylText"
            android:layout_width="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:text="00.00"
            android:textAlignment="viewEnd" />
    </GridLayout>

    <GridLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnSave"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnNew"
            style="@style/stylBtn"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/New" />

    </GridLayout>

    <GridView
        android:id="@+id/gvDataView"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="15dp"
        android:layout_height="450dp"
        android:visibility="visible" />

</GridLayout>